# korefield-energy-technology

./: .dockerignore  .gitignore  FIGMA_DESIGN_RULES.md  docker-compose.yml
ai-services/: .dockerignore  .env.example  Dockerfile  config.py  logging_config.py  main.py  pyproject.toml
ai-services/agents/: __init__.py  ai_cap_service.py  circuit_breaker.py  llm_factory.py  tutor_cache.py
ai-services/agents/executive/: __init__.py  academic_performance.py  expansion.py  growth.py  market_intelligence.py  pricing_intelligence.py  product_strategy.py  strategy.py  workforce_intelligence.py
ai-services/agents/faculty/: __init__.py  assessor_support.py  certification_validation.py  instructor_insight.py
ai-services/agents/learner/: __init__.py  career.py  diagnostic.py  dropout.py  feedback.py  guardrails.py  tutor.py
ai-services/prompts/: __init__.py  manager.py
ai-services/prompts/templates/tutor/: lesson_delivery.yaml
ai-services/rag/: __init__.py  chunking.py  embedding.py  pipeline.py
ai-services/tests/: __init__.py  test_circuit_breaker_properties.py  test_cost_controls.py  test_cost_controls_properties.py  test_dropout_properties.py  test_executive_agents.py  test_faculty_agents.py  test_health.py  test_learner_agents.py  test_llm_properties.py  test_prompts.py  test_rag.py  test_rag_properties.py
ai-services/workflows/: __init__.py
backend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  seed-cohort-economics.js  tsconfig.json
infrastructure/lambda/virus-scanner/: handler.py  pyproject.toml  test_virus_scanner_properties.py
(+417 files in other folders)
